--- a/lynora/frontend/src/components/DarkVeil.css
+++ b/lynora/frontend/src/components/DarkVeil.css
@@ -1,6 +1,11 @@
 .darkveil-canvas {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
